Feature: DI + Authentication + Split layers + Setup Project

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,6 @@ xcuserdata
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+GoogleService-Info.plist
+environment.production.swift
